--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 <!--Contact Us Section-->
 <div class="row">
 <div id="email" class="container-fluid col-lg-12 email">
-	<form method="POST" action="http://formspree.io/blueblackdigital@gmail.com">
+	<form method="POST" action="https://formspree.io/blueblackdigital@gmail.com">
 		
 		<div class="form-group">
 			<label for="name">Name: </label>
