--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 	
 	<div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 portfolio_container">
 		<a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
-			<img src="modal/WikiViewer.png" alt="Avatar" class="image">
+			<img src="modal/WikiViewer_M.PNG" alt="Avatar" class="image">
 				<div class="overlay">
 					<i class="fa fa-search-plus fa-5x icon"></i>
 				</div>
