--- a/index.html
+++ b/index.html
@@ -137,26 +137,32 @@
 			<div class="col-sm-3">
 				<h4>Custom Website</h4>
 				<img src="services/Custom_Website.png">
-				<p> $30 hour </p>
+				<p>  </p>
 				<p>This is the hourly rate for website work.</p>
 			</div>
 			<div class="col-sm-3">
 				<h4>Template</h4>
 				<img src="services/Template.png">
-				<p> $65 </p>
+				<p>  </p>
 				<p>This will include a one page website.</p>
 			</div>
 			<div class="col-sm-3">
 				<h4>Hosting</h4>
 				<img  src="services/Hosting.png">
-				<p> $120/year </p>
+				<p>  </p>
 				<p>This will include hosting of your website for one year.</p>
 			</div>
 			<div class="col-sm-3">
 				<h4>Domain Name Setup</h4>
 				<img  src="services/DN_Setup.png">
-				<p> $30 </p>
+				<p> </p>
 				<p>I'll setup your GoDaddy or specified domain name hosting account.</p>
+			</div>
+				<div class="col-sm-3">
+				<h4>Marketing</h4>
+				<img src="services/Marketing.png">
+				<p> </p>
+				<p>I offer Facebook, Instagram, and other social media marketing services. </p>
 			</div>
 			</div>
 	
@@ -212,6 +218,7 @@
           <label><input type="checkbox" name="service" value="custome site">Custome Site </label>
 		  <label><input type="checkbox" name="service" value="hosting">Hosting </label>
 		  <label><input type="checkbox" name="service" value="DNSetup">Domain Name Setup </label>
+		  <label><input type="checkbox" name="service" value="marketing"> Marketing </label>
         </div>
       </div>
     
