--- a/index.html
+++ b/index.html
@@ -164,6 +164,11 @@
 				<p> </p>
 				<p>I offer Facebook, Instagram, and other social media marketing services. </p>
 			</div>
+				<div class="col-sm-3">
+				<h4>Website Maintenance</h4>
+				<img src="services/Computer_Setup.png">
+				<p> </p>
+				<pThis will include maintaining your website. Which can mean adding images, text, and more. </p>
 			</div>
 	
 </div>
