--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 				<h4>Website Maintenance</h4>
 				<img src="services/Computer_Setup.png">
 				<p> </p>
-				<pThis will include maintaining your website. Which can mean adding images, text, and more. </p>
+				<p>This will include maintaining your website. Which can mean adding images, text, and more. </p>
 			</div>
 	
 </div>
