--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 				<p> </p>
 				<p>I offer Facebook, Instagram, and other social media marketing services. </p>
 			</div>
-	
+</div>	
 </div>
 </div>
 <!--Service Section-->
