Update Index.html (1.0)
Re-uploaded change due to <div> error - Added <div class="col-sm-3">
				<h4>Website Maintenance</h4>
				<img src="services/Computer_Setup.png">
				<p> </p>
				<p>This will include maintaining your website. Which can mean adding images, text, and more. </p>
			</div>
</div>

--- a/index.html
+++ b/index.html
@@ -164,6 +164,12 @@
 				<p> </p>
 				<p>I offer Facebook, Instagram, and other social media marketing services. </p>
 			</div>
+			<div class="col-sm-3">
+				<h4>Website Maintenance</h4>
+				<img src="services/Computer_Setup.png">
+				<p> </p>
+				<p>This will include maintaining your website. Which can mean adding images, text, and more. </p>
+			</div>
 </div>	
 </div>
 </div>
