--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
 		  <label><input type="checkbox" name="service" value="hosting">Hosting </label>
 		  <label><input type="checkbox" name="service" value="DNSetup">Domain Name Setup </label>
 		  <label><input type="checkbox" name="service" value="marketing"> Marketing </label>
+		  <label><input type="checkbox" name="service" value="maintenance"> Website Maintenance </label>								
         </div>
       </div>
     
