--- a/index.html
+++ b/index.html
@@ -45,8 +45,13 @@
 					<li><a href="#locateUS">Location</a></li>
 					<!--<li><a href="#email">Contact</a></li>-->
 				 </ul>
-				<a class="quote-navbar-brand" href="#email">Get Quote</a>
 		</div>
+				<div class="navbar-right hidden-xs free-quote">	
+					<a href="#" class="btn btn-xs btn-default visible-sm">Free Quote</a>
+					<a href="#" class="btn btn-default hidden-sm">Free Quote</a>
+				</div>	
+
+            </div>
 	</div>
 </nav>
 <!--Navagation-->
