--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					<li><a href="#portfolio">Portfolio</a></li>
 					<li><a href="#services">Services</a></li>
 					<li><a href="#locateUS">Location</a></li>
-					<!--<li><a href="#email">Contact</a></li>-->
+					<li><a href="#email">Contact</a></li>
 				 </ul>
 	</div>
 </nav>
