--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
 		</div>
 				<div class="collapse navbar-collapse" id="myNavbar">
 				 <ul class="nav navbar-nav navbar-right">
-					<li><a href="#logo">About</a></li>
+					<li><a href="#logo">About</a></li>				  </button><!DOCTYPE html><!DOCTYPE html>
+
 					<li><a href="#portfolio">Portfolio</a></li>
 					<li><a href="#services">Services</a></li>
 					<li><a href="#locateUS">Location</a></li>
