--- a/Bundle/index.html
+++ b/Bundle/index.html
@@ -74,7 +74,7 @@
 <!--Contact Us Section-->
 <div class="row">
 <div id="email" class="container-fluid col-lg-12 email">
-	<form method="POST" action="https://formspree.io/mrgyjnaa">
+	<form method="POST" action="https://formspree.io/xwkrzeev">
 		
 		<div class="form-group">
 			<label for="name">Name: </label>
