--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
       <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 portfolio_container">
         <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
-          <img src="modal/Wikiviewer.png" alt="Avatar" class="image">
+          <img src="modal/WikiViewer.png" alt="Avatar" class="image">
           <div class="overlay"> <i class="fa fa-search-plus fa-5x icon"></i> </div>
         </a>
       </div>
@@ -189,7 +189,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
       <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 portfolio_container">
         <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
-          <img src="modal/theButton.png" alt="Avatar" class="image">
+          <img src="modal/theButton.PNG" alt="Avatar" class="image">
           <div class="overlay"> <i class="fa fa-search-plus fa-5x icon"></i> </div>
         </a>
       </div>
