--- a/index.html
+++ b/index.html
@@ -6,140 +6,13 @@
 <html lang="en">
 
 <head>
-<!-- Global site tag (gtag.js) - Google Ads: 929702600 -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-929702600"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'AW-929702600');
-</script>
-
-<!-- Event snippet for Desktop-Phone-Calls conversion page
-In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
-<script>
-function gtag_report_conversion(url) {
-  var callback = function () {
-    if (typeof(url) != 'undefined') {
-      window.location = url;
-    }
-  };
-  gtag('event', 'conversion', {
-      'send_to': 'AW-929702600/ZSefCKDAtN4BEMjFqLsD',
-      'event_callback': callback
-  });
-  return false;
-}
-</script>
-
-<!-- Event snippet for Mobile-Site-Calls conversion page
-In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
-<script>
-function gtag_report_conversion(url) {
-  var callback = function () {
-    if (typeof(url) != 'undefined') {
-      window.location = url;
-    }
-  };
-  gtag('event', 'conversion', {
-      'send_to': 'AW-929702600/VMjfCM-Yv94BEMjFqLsD',
-      'event_callback': callback
-  });
-  return false;
-}
-</script>
-
-<!-- Event snippet for Hobby Site Bundle conversion page
-In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
-<script>
-function gtag_report_conversion(url) {
-  var callback = function () {
-    if (typeof(url) != 'undefined') {
-      window.location = url;
-    }
-  };
-  gtag('event', 'conversion', {
-      'send_to': 'AW-929702600/LyQiCMPptN4BEMjFqLsD',
-      'value': 330.0,
-      'currency': 'USD',
-      'event_callback': callback
-  });
-  return false;
-}
-</script>
-
-<!-- Event snippet for Multiple Page Site conversion page
-In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
-<script>
-function gtag_report_conversion(url) {
-  var callback = function () {
-    if (typeof(url) != 'undefined') {
-      window.location = url;
-    }
-  };
-  gtag('event', 'conversion', {
-      'send_to': 'AW-929702600/EdKmCLX2tN4BEMjFqLsD',
-      'value': 900.0,
-      'currency': 'USD',
-      'event_callback': callback
-  });
-  return false;
-}
-</script>
-
-<!-- Event snippet for Startup Site Package conversion page
-In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
-<script>
-function gtag_report_conversion(url) {
-  var callback = function () {
-    if (typeof(url) != 'undefined') {
-      window.location = url;
-    }
-  };
-  gtag('event', 'conversion', {
-      'send_to': 'AW-929702600/FDfjCKKtv94BEMjFqLsD',
-      'value': 600.0,
-      'currency': 'USD',
-      'event_callback': callback
-  });
-  return false;
-}
-</script>
-
-<!-- Event snippet for Facebook Page Click conversion page
-In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
-<script>
-function gtag_report_conversion(url) {
-  var callback = function () {
-    if (typeof(url) != 'undefined') {
-      window.location = url;
-    }
-  };
-  gtag('event', 'conversion', {
-      'send_to': 'AW-929702600/I1EbCLS8v94BEMjFqLsD',
-      'event_callback': callback
-  });
-  return false;
-}
-</script>
-
-<!-- Event snippet for Custom Site Appointment conversion page
-In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
-<script>
-function gtag_report_conversion(url) {
-  var callback = function () {
-    if (typeof(url) != 'undefined') {
-      window.location = url;
-    }
-  };
-  gtag('event', 'conversion', {
-      'send_to': 'AW-929702600/fYTnCO3v0N4BEMjFqLsD',
-      'event_callback': callback
-  });
-  return false;
-}
-</script>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-T7VCD46');</script>
+<!-- End Google Tag Manager -->
 
 
   <!--************************-->
@@ -157,13 +30,17 @@ function gtag_report_conversion(url) {
 </head>
 
 <body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T7VCD46"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
   <!--navagation-->
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
         <a class="navbar-brand" href="#">Blue Black Digital</a>
-		<a onclick="goog_report_conversion ('tel:(260) 571-9296')" a class="navbar-brand visible-xs pull-right" href="tel:(260) 571-9296"><i class="glyphicon glyphicon-phone" id="mobile-phone"></i></a>
+		<a class="navbar-brand visible-xs pull-right" href="tel:(260) 571-9296"><i class="glyphicon glyphicon-phone" id="mobile-phone"></i></a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
@@ -171,7 +48,7 @@ function gtag_report_conversion(url) {
 		  <li><a href="#portfolio">Portfolio</a></li>
 		  <li><a href="#testimonials">Testimonials</a></li>
 		  <li><a href="#contact">Contact</a></li>
-		  <li><a onclick="goog_report_conversion ('tel:(260) 571-9296')" href="tel:(260) 571-9296" id="desktop-phone">(260) 571-9296</a></li>
+		  <li><a href="tel:(260) 571-9296" id="desktop-phone">(260) 571-9296</a></li>
         </ul>
       </div>
     </div>
@@ -195,16 +72,14 @@ function gtag_report_conversion(url) {
           <ul class="price">
             <li class="header">Hobby Site Package</li>
             <li class="grey">
-              <h4>$530</h4>
-			  </h3> Special Pricing Till 1/1/2021 </h3>
-              <h3>$330</h3>
+              <h3>$530</h3>
             </li>
             <li>Single Page</li>
 			<li>Call To Action Button</li>
             <li>CMS (content Managment System)</li>
             <li>One Year Hosting Included</li>
             <li>Domain Name Included for First Year</li>
-            <li class="grey"><a onclick="goog_report_conversion ('https://checkout.square.site/pay/64b627c31d964043b22c4409715ebead')" href="https://checkout.square.site/pay/64b627c31d964043b22c4409715ebead" target="_blank" class="button">Buy Now</a></li>
+            <li class="grey"><a href="#contact" class="button">Contact Me</a></li>
           </ul>
         </div>
 
@@ -212,16 +87,14 @@ function gtag_report_conversion(url) {
           <ul class="price">
             <li class="header">Startup Site Package</li>
             <li class="grey">
-              <h4>$800</h4>
-              </h3> Special Pricing Till 1/1/2021 </h3>
-              <h3>$600</h3>
+              <h3>$800</h3>
             </li>
             <li>Single Page</li>
 			<li>Contact Form</li>
             <li>CMS (content Managment System)</li>
             <li>One Year Hosting Included</li>
             <li>Domain Name Included for First Year</li>
-            <li class="grey"><a onclick="goog_report_conversion ('https://checkout.square.site/pay/a644269f1db24d61b15581b988b3364f')" href="https://checkout.square.site/pay/a644269f1db24d61b15581b988b3364f" target="_blank" class="button">Buy Now</a></li>
+            <li class="grey"><a href="#contact" target="_blank" class="button">Contact Me</a></li>
           </ul>
         </div>
 
@@ -229,31 +102,29 @@ function gtag_report_conversion(url) {
           <ul class="price">
             <li class="header">Multiple Page Package</li>
             <li class="grey">
-              <h4>$1,100</h4>
-              </h3> Special Pricing Till 1/1/2021 </h3>
-              <h3>$900</h3>
+              <h3>$1,100</h3>
             </li>
             <li>3 Page Site</li>
 			<li>Image Gallery</li>
             <li>CMS (content Managment System)</li>
             <li>One Year Hosting Included</li>
             <li>Domain Name Included for First Year</li>
-            <li class="grey"><a onclick="goog_report_conversion ('https://checkout.square.site/pay/3241549d5c11428f9b0d4d654200346f')" href="https://checkout.square.site/pay/3241549d5c11428f9b0d4d654200346f" target="_blank" class="button">Buy Now</a></li>
+            <li class="grey"><a href="#contact" target="_blank" class="button">Contact Me</a></li>
           </ul>
         </div>
 
         <div class="col">
           <ul class="price">
-            <li class="header">Custom Site Package</li>
+            <li class="header">Custom Site</li>
             <li class="grey">
-              <h3>$75/hr</h3>
+              <h3>varies per project</h3>
             </li>
             <li>Multiple Pages</li>
             <li>Three Revisions</li>
             <li>CMS (content Managment System)</li>
-            <li>Mobile Friendly</li>
+            <li>E-commerce Available</li>
             <li>Domain Name Included for First Year</li>
-            <li class="grey"><a onclick="goog_report_conversion ('https://squareup.com/appointments/book/ckbvqiubm4tjpb/Q7R93F9966FWK/date')" href="https://squareup.com/appointments/book/ckbvqiubm4tjpb/Q7R93F9966FWK/date" target="_blank" class="button">Contact Me</a></li>
+            <li class="grey"><a onclick="goog_report_conversion ('https://squareup.com/appointments/book/ckbvqiubm4tjpb/Q7R93F9966FWK/date')" href="https://squareup.com/appointments/book/ckbvqiubm4tjpb/Q7R93F9966FWK/date" target="_blank" class="button">Schedule Appointment</a></li>
           </ul>
         </div>
 
@@ -341,8 +212,8 @@ function gtag_report_conversion(url) {
   </div>
 
   <div class="mySlides">
-    <q>Your words could be here</q>
-    <p class="author">- you, future client</p>
+    <q>100% the best web design experience I've ever had. He was quick to help and more than ready to work with me on the design and function I wanted. I highly recommend!</q>
+    <p class="author">- Tiki Tiki</p>
   </div>
 
   <div class="mySlides">
@@ -366,32 +237,47 @@ function gtag_report_conversion(url) {
   <!--contact Us Section-->
   <div class="row">
     <div id="contact" class="container-fluid col-lg-12 email">
-      <form method="POST" action="https://formspree.io/xnqgvaro">
+      <form action="https://api.staticforms.xyz/submit" method="post">
+		 <input type="hidden" name="accessKey" value="92d0c5fc-909a-43b6-bcf8-d9925e08e474">
+		 <input type="hidden" name="subject" value="Quote Form"> <!-- Optional -->
         <div class="form-group">
           <label for="name">Name: </label>
-          <input type="name" class="form-control" name="name" id="name" placeholder="Your name"  required type="text">
+          <input type="text" class="form-control" name="name" id="name" placeholder="Your name"  required type="text">
         </div>
         <div class="form-group">
           <label for="business-name">Business Name: </label>
-          <input type="name" class="form-control" name="name" id="business name" placeholder="Business name" required type="text">
+          <input type="text" class="form-control" name="$business" id="business" placeholder="Business name" required type="text">
         </div>
         <div class="form-group">
           <label for="email">Email: </label>
-          <input type="email" class="form-control" name="_replyto" id="email" placeholder="Your email" required type="email">
+          <input type="text" class="form-control" name="email" id="email" placeholder="Your email" required type="email">
         </div>
+		<div class="form-group">
+			<label for="pages">Budget: </label>
+			</br>
+			<select name="$budget">
+				<option value="$100-$500">$100-$529</option>
+				<option value="$530-$799" id="hobby">$530-$799</option>
+				<option value="$800-$1,099">$800-$1,099</option>
+				<option value="$1,100+">$1,100+</option>
+			</select>
+		</div>
         <div class="form-group">
           <label for="comment">What do you need in a website?</label>
-          <textarea class="form-control" name="message" placeholder="This is for marketing. I have a product to sell. I just started my own business. I want a unique wedding invitation"></textarea>
+          <textarea class="form-control" type="text" name="message" placeholder="This is for marketing. I have a product to sell. I just started my own business. I want a unique wedding invitation"></textarea>
         </div>
         <div class="form-group">
           <label for="newsletter">
             Subscribe to Newsletter :
             </br>
           </label>
-          <input type="checkbox" name="newsletter" value="newsletter">
+          <input type="checkbox" name="$newsletter" value="newsletter">
         </div>
         <p> "Your email will not be shared" </p>
         </br>
+		<!-- If we receive data in this field submission will be ignored -->
+		<input type="text" name="honeypot" style="display: none;"> <!-- Optional -->
+		<input type="hidden" name="redirectTo" value="https://blueblackdigital.com"> 
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
     </div>
@@ -404,7 +290,7 @@ function gtag_report_conversion(url) {
   <div class="row">
     <div class="container-fluid text-center socialMedia col-lg-12">
       <ul class="list-inline">
-        <li> <a onclick="goog_report_conversion ('https://www.facebook.com/BlueBlackDigital/')" href="https://www.facebook.com/BlueBlackDigital/" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a> </li>
+        <li> <a href="https://www.facebook.com/BlueBlackDigital/" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a> </li>
         <li> <a href="https://squareup.com/appointments/book/ckbvqiubm4tjpb/Q7R93F9966FWK/date" class="btn-social btn-outline"><i class="fa fa-calendar"></i></a> </li>
         <li> <a href="https://www.instagram.com/blueblackdigital/" class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"></i></a> </li>
       </ul>
@@ -414,11 +300,31 @@ function gtag_report_conversion(url) {
   <!--******************************************************************************-->
   <!--******************************************************************************-->
   
-  <!--Price Page Modals-->
-  
-  <!--Hobby Modal Content-->
-
-  <!--Price Page Modals End-->
+   <!-- Coupon Modal -->
+  	<div id="couponModal" class="modal">
+	<div class="coupon-modal-content">
+		<span class="close" data-dismiss="modal">&times;</span>
+		  <h2>Want to save $200 on a site package?</h2>
+		  
+    <form action="https://api.staticforms.xyz/submit" method="post">
+	<input type="hidden" name="accessKey" value="92d0c5fc-909a-43b6-bcf8-d9925e08e474">
+		 <input type="hidden" name="subject" value="Coupon Popup"> <!-- Optional -->
+        <div class="form-group">
+          <label for="name">Name: </label>
+          <input type="text" class="form-control" name="name" id="name" placeholder="Your name"  required type="text">
+        </div>
+        <div class="form-group">
+          <label for="email">Email: </label>
+          <input type="text" class="form-control" name="email" id="email" placeholder="Your email" required type="email">
+        </div>
+		<!-- If we receive data in this field submission will be ignored -->
+		<input type="text" name="honeypot" style="display: none;"> <!-- Optional -->
+		<input type="hidden" name="redirectTo" value="https://blueblackdigital.com"> 
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
+	</div>
+	</div>
+  <!-- Coupon Modal End -->
   <!--******************************************************************************-->
   
   <!--******************************************************************************-->
@@ -578,10 +484,11 @@ function gtag_report_conversion(url) {
       // Add scrollspy to <body>
       $('body').scrollspy({
         target: ".navbar",
+		target: ".services",
         offset: 50
       });
       // Add smooth scrolling on all links inside the navbar
-      $("#myNavbar a").on('click', function(event) {
+      $("#myNavbar a, #services a").on('click', function(event) {
         // Make sure this.hash has a value before overriding default behavior
         if (this.hash !== "") {
           // Prevent default anchor click behavior
@@ -620,6 +527,7 @@ function showSlides() {
   setTimeout(showSlides, 9000); // Change image every 2 seconds
 }
   </script>
+  <script src="coupon.js"></script>
   <!--script-->
 
 </html>
