--- a/index.html
+++ b/index.html
@@ -6,15 +6,6 @@
 <html lang="en">
 
 <head>
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-T7VCD46');</script>
-<!-- End Google Tag Manager -->
-
-
   <!--************************-->
   <!--change to preferred name-->
   <title> Blue Black Digital, LLC </title>
@@ -30,10 +21,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </head>
 
 <body>
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T7VCD46"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
   <!--navagation-->
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
@@ -79,7 +66,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <li>CMS (content Managment System)</li>
             <li>One Year Hosting Included</li>
             <li>Domain Name Included for First Year</li>
-            <li class="grey"><a href="#contact" class="button">Contact Me</a></li>
+            <li class="grey"><a href="#contact" id="hobby" class="button">Contact Me</a></li>
           </ul>
         </div>
 
