--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <li>CMS (content Managment System)</li>
             <li>One Year Hosting Included</li>
             <li>Domain Name Included for First Year</li>
-            <li class="grey"><a href="#contact" target="_blank" class="button">Contact Me</a></li>
+            <li class="grey"><a href="#contact" id="startup" target="_blank" class="button">Contact Me</a></li>
           </ul>
         </div>
 
@@ -107,7 +107,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <li>CMS (content Managment System)</li>
             <li>One Year Hosting Included</li>
             <li>Domain Name Included for First Year</li>
-            <li class="grey"><a href="#contact" target="_blank" class="button">Contact Me</a></li>
+            <li class="grey"><a href="#contact" id="multiple" target="_blank" class="button">Contact Me</a></li>
           </ul>
         </div>
 
@@ -122,7 +122,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <li>CMS (content Managment System)</li>
             <li>E-commerce Available</li>
             <li>Domain Name Included for First Year</li>
-            <li class="grey"><a onclick="goog_report_conversion ('https://squareup.com/appointments/book/ckbvqiubm4tjpb/Q7R93F9966FWK/date')" href="https://squareup.com/appointments/book/ckbvqiubm4tjpb/Q7R93F9966FWK/date" target="_blank" class="button">Schedule Appointment</a></li>
+            <li class="grey"><a onclick="goog_report_conversion ('https://squareup.com/appointments/book/ckbvqiubm4tjpb/Q7R93F9966FWK/date')" href="https://squareup.com/appointments/book/ckbvqiubm4tjpb/Q7R93F9966FWK/date" target="_blank" id="custom" class="button">Schedule Appointment</a></li>
           </ul>
         </div>
 
@@ -137,7 +137,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <li>Image Changes</li>
             <li>Text Changes</li>
             <li>No Yearly Contract</li>
-            <li class="grey"><a href="https://checkout.square.site/pay/0e05a2166a67465a91a8718c08c422bc" class="button">Buy Now</a></li>
+            <li class="grey"><a href="https://checkout.square.site/pay/0e05a2166a67465a91a8718c08c422bc" id="maintenance" class="button">Buy Now</a></li>
           </ul>
         </div>
 		
@@ -150,7 +150,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <li>Website Analytics</li>
             <li>Monthly Site Backup</li>
             <li>Flat Rate</li>
-            <li class="grey"><a href="https://checkout.square.site/pay/5a26193ee1e643f9817de88eb98c5c07" class="button">Buy Now</a></li>
+            <li class="grey"><a href="https://checkout.square.site/pay/5a26193ee1e643f9817de88eb98c5c07" id="hosting" class="button">Buy Now</a></li>
           </ul>
         </div>
 
