--- a/index.html
+++ b/index.html
@@ -285,8 +285,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="container-fluid text-center socialMedia col-lg-12">
       <ul class="list-inline">
         <li> <a href="https://www.facebook.com/BlueBlackDigital/" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook" id="facebook"></i></a> </li>
-        <li> <a href="https://squareup.com/appointments/book/ckbvqiubm4tjpb/Q7R93F9966FWK/date" class="btn-social btn-outline"><i class="fa fa-calendar" id="appointment"></i></a> </li>
-        <li> <a href="https://www.instagram.com/blueblackdigital/" class="btn-social btn-outline" ><i class="fa fa-fw fa-instagram" id="instagram"></i></a> </li>
+        <li> <a href="https://squareup.com/appointments/book/ckbvqiubm4tjpb/Q7R93F9966FWK/date" target="_blank" class="btn-social btn-outline"><i class="fa fa-calendar" id="appointment"></i></a> </li>
+        <li> <a href="https://www.instagram.com/blueblackdigital/" target="_blank" class="btn-social btn-outline" ><i class="fa fa-fw fa-instagram" id="instagram"></i></a> </li>
       </ul>
     </div>
   </div>
