--- a/index.html
+++ b/index.html
@@ -298,8 +298,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   	<div id="couponModal" class="modal">
 	<div class="coupon-modal-content">
 		<span class="close" data-dismiss="modal">&times;</span>
-		  <h2>Want to save $200 on a site package?</h2>
-		  <h5> expires 11/01/2020 </h5>
+		  <h2>Want to join our newsletter?</h2>
 		  
     <form action="https://api.staticforms.xyz/submit" method="post">
 	<input type="hidden" name="accessKey" value="92d0c5fc-909a-43b6-bcf8-d9925e08e474">
