--- a/index.html
+++ b/index.html
@@ -169,6 +169,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div class="overlay"> <i class="fa fa-search-plus fa-5x icon"></i> </div>
         </a>
       </div>
+	  <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 portfolio_container">
+        <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+          <img src="modal/Reputation_Rising.png" alt="Avatar" class="image">
+          <div class="overlay"> <i class="fa fa-search-plus fa-5x icon"></i> </div>
+        </a>
+      </div>
       <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 portfolio_container">
         <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
           <img src="modal/WikiViewer.png" alt="Avatar" class="image">
@@ -323,6 +329,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   
   <!--******************************************************************************-->
   <!-- Portfolio Modals -->
+  <!-- Cava Start-->
   <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-content">
       <div class="close-modal" data-dismiss="modal">
@@ -352,6 +359,37 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
   </div>
   <!--cava END-->
+  <!--******************************************************************************-->
+  <!--reputation rising-->
+  <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-content">
+      <div class="close-modal" data-dismiss="modal">
+        <div class="lr">
+          <div class="rl"></div>
+        </div>
+      </div>
+      <div class="portfolio-container">
+        <div class="row">
+          <div class="col-lg-8 col-lg-offset-2">
+            <div class="modal-body">
+              <h2>CAVA</h2>
+              <p>center for advancement of veteran artisans </p>
+              <hr class="star-primary">
+              <img src="modal/reputation_rising_M.png" class="img-responsive img-centered" alt="">
+              <p> <a href="http://www.centerforveteranartisans.org/">CAVA</a> ,created to introduce more people to the project Glassique Art started. Using a bootstrap framework CAVA was brought to life with HTML5 and CSS3. If you would like to know what it's about please check it out!</p>
+              <ul class="list-inline item-details">
+                <li><strong>Client:</strong> <a href="http://www.facebook.com/GlassiqueArt">Glassique Art</a> </li>
+                <li><strong>Date: </strong> June 2016 </li>
+                <li><strong>Service:</strong> Web Development </li>
+              </ul>
+              <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--reputation rising end-->
   <!--******************************************************************************-->
   <!--wikiviewer-->
   <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
