--- a/index.html
+++ b/index.html
@@ -372,15 +372,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="row">
           <div class="col-lg-8 col-lg-offset-2">
             <div class="modal-body">
-              <h2>CAVA</h2>
-              <p>center for advancement of veteran artisans </p>
+              <h2>Reputation Rising</h2>
               <hr class="star-primary">
               <img src="modal/reputation_rising_M.png" class="img-responsive img-centered" alt="">
-              <p> <a href="http://www.centerforveteranartisans.org/">CAVA</a> ,created to introduce more people to the project Glassique Art started. Using a bootstrap framework CAVA was brought to life with HTML5 and CSS3. If you would like to know what it's about please check it out!</p>
+              <p> <a href="https://www.reputationrising.com/">Reputation Rising</a> is an SEO business located in Arizona. They were looking to create a site to education on ways to help your business grow.</p>
               <ul class="list-inline item-details">
-                <li><strong>Client:</strong> <a href="http://www.facebook.com/GlassiqueArt">Glassique Art</a> </li>
-                <li><strong>Date: </strong> June 2016 </li>
-                <li><strong>Service:</strong> Web Development </li>
+                <li><strong>Client:</strong> <a href="https://www.facebook.com/reputationrising">Reputation Rising</a> </li>
+                <li><strong>Date: </strong> November 2020 </li>
+                <li><strong>Service:</strong> Web Design </li>
               </ul>
               <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
             </div>
